i have been prepared Developing branch for merging and completting tasks
